skills for project

--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
         <div class="container grid grid-3">
             
 
-            <div class="card">
+            <div class="card card-project ">
                 <div>
                     <img class="project-img" src="img/project-portfolio.png" alt=""/>
                 </div>
@@ -148,9 +148,19 @@
                     <a href="https://rachel-s-portfolio.netlify.app/index.html"><button class="btn-small">Live Demo</button></a>
                     <a href="https://github.com/xinyirachel/Rachel-s-Portfolio"><button class="btn-small">Github</button></a>
                 </div>
+                <div>
+                    <div class="chip">
+                        <img src="img/html5.svg">
+                        HTML
+                    </div>
+                    <div class="chip">
+                        <img src="img/css.svg">
+                        CSS
+                    </div>
+                </div>
             </div>
 
-            <div class="card">
+            <div class="card card-project ">
                 <div>
                     <img class="project-img" src="img/project-vintagefashion.png" alt=""/>
                 </div>
@@ -159,9 +169,31 @@
                     <a href="https://vintage-fashion2.herokuapp.com/"><button class="btn-small">Live Demo</button></a>
                     <a href="https://github.com/xinyirachel/VintageFashion"><button class="btn-small">Github</button></a>
                 </div>
+                <div>
+                    <div class="chip">
+                        <img src="img/html5.svg">
+                        HTML
+                    </div>
+                    <div class="chip">
+                        <img src="img/css.svg">
+                        CSS
+                    </div>
+                    <div class="chip">
+                        <img src="img/ruby.svg">
+                        Ruby
+                    </div>
+                    <div class="chip">
+                        <img src="img/rails.svg">
+                        Rails
+                    </div>
+                    <div class="chip">
+                        <img src="img/awss3.svg">
+                        AWSS3
+                    </div>
+                </div>
             </div>
 
-            <div class="card">
+            <div class="card card-project ">
                 <div>
                     <img class="project-img" src="img/project-simple-note.png" alt=""/>
                 </div>
@@ -170,9 +202,27 @@
                     <a href="https://rachel-simple-note.netlify.app/"><button class="btn-small">Live Demo</button></a>
                     <a href="https://github.com/xinyirachel/Simple-Note"><button class="btn-small">Github</button></a>
                 </div>
+                <div>
+                    <div class="chip">
+                        <img src="img/html5.svg">
+                        HTML
+                    </div>
+                    <div class="chip">
+                        <img src="img/css.svg">
+                        CSS
+                    </div>
+                    <div class="chip">
+                        <img src="img/javascript.svg">
+                        Javascript
+                    </div>
+                    <div class="chip">
+                        <img src="img/react.svg">
+                        React
+                    </div>
+                </div>
             </div>
 
-            <div class="card">
+            <div class="card card-project ">
                 <div>
                     <img class="project-img" src="img/project-chocolate.png" alt=""/>
                 </div>
@@ -181,9 +231,39 @@
                     <a href="https://chocolatemoments.herokuapp.com/"><button class="btn-small">Live Demo</button></a>
                     <a href="https://github.com/xinyirachel/chocolate-moments"><button class="btn-small">Github</button></a>
                 </div>
+                <div>
+                    <div class="chip">
+                        <img src="img/html5.svg">
+                        HTML
+                    </div>
+                    <div class="chip">
+                        <img src="img/css.svg">
+                        CSS
+                    </div>
+                    <div class="chip">
+                        <img src="img/javascript.svg">
+                        Javascript
+                    </div>
+                    <div class="chip">
+                        <img src="img/react.svg">
+                        React
+                    </div>
+                    <div class="chip">
+                        <img src="img/nodejs.svg">
+                        NodeJS
+                    </div>
+                    <div class="chip">
+                        <img src="img/express.svg">
+                        ExpressJS
+                    </div>
+                    <div class="chip">
+                        <img src="img/mongodb.svg">
+                        MongoDB
+                    </div>
+                </div>
             </div>
 
-            <div class="card">
+            <div class="card card-project ">
                 <div>
                     <img class="project-img" src="img/project-inprogress.png" alt=""/>
                 </div>
@@ -194,7 +274,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card card-project ">
                 <div>
                     <img class="project-img" src="img/project-inprogress.png" alt=""/>
                 </div>
@@ -243,6 +323,8 @@
                 <a href="https://github.com/xinyirachel"><i class="fa-brands fa-github fa-3x"></i></a>
                 <a href="https://www.linkedin.com/in/xinyi-wang-xyw/"><i
                         class="fa-brands fa-linkedin fa-3x"></i></i></a>
+                <a href="https://www.facebook.com/xinyi.wang.5283/"><i
+                            class="fa-brands fa-facebook fa-3x"></i></i></a>
             </div>
             <div>
                 <ul>
