fix mobile view

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
         </h2>
         <section class="skills flex">
 
-            <div class="container flex">
+            <div class="flex container-skills">
                 <div class="card">
                     <img class=svg src="img/html5.svg" alt="">
                     <div>HTML</div>
@@ -263,7 +263,7 @@
                 </div>
             </div>
 
-            <div class="card card-project ">
+            <div class="card card-project-cs ">
                 <div>
                     <img class="project-img" src="img/project-inprogress.png" alt=""/>
                 </div>
@@ -274,7 +274,7 @@
                 </div>
             </div>
 
-            <div class="card card-project ">
+            <div class="card card-project-cs ">
                 <div>
                     <img class="project-img" src="img/project-inprogress.png" alt=""/>
                 </div>
