update skills section

--- a/src/index.html
+++ b/src/index.html
@@ -85,10 +85,6 @@
                     <div>CSS</div>
                 </div>
                 <div class="card">
-                    <img class=svg src="img/bootstrap.svg" alt="">
-                    <div>Bootstrap</div>
-                </div>
-                <div class="card">
                     <img class=svg src="img/javascript.svg" alt="">
                     <div>Javascript</div>
                 </div>
@@ -97,20 +93,8 @@
                     <div>React</div>
                 </div>
                 <div class="card">
-                    <img class=svg src="img/materialui.svg" alt="">
-                    <div>Material UI</div>
-                </div>
-                <div class="card">
-                    <img class=svg src="img/nodejs.svg" alt="">
-                    <div>NodeJS</div>
-                </div>
-                <div class="card">
-                    <img class=svg src="img/express.svg" alt="">
-                    <div>ExpressJS</div>
-                </div>
-                <div class="card">
-                    <img class=svg src="img/mongodb.svg" alt="">
-                    <div>MongoDB</div>
+                    <img class=svg src="img/vue.svg" alt="">
+                    <div>Vue</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/ruby.svg" alt="">
@@ -131,6 +115,13 @@
                 <div class="card">
                     <img class=svg src="img/awss3.svg" alt="">
                     <div>AWS S3</div>
+                </div>
+                <div class="card">
+                    <img class=svg src="img/figma.svg" alt="">
+                    <div>Figma</div>
+                </div>
+                <div class="card">
+                    <div>etc...</div>
                 </div>
         </section>
     </section>
