--- a/src/index.html
+++ b/src/index.html
@@ -41,16 +41,8 @@
         <div class="container grid">
             <div class="about-me-text">
                 <h1>Hi, I am Rachel.</h1>
-                <p>I love designing and building stuff from scratch. 
-                    My interest in website development sparked by playing 
-                    with HTML and CSS to customize an blog template, and I think it is extremely interesting. 
-                    My curiosity in programming started by
-                      playing RPG Maker back in 2012 when I wanted to create
-                       my own RPG game. I copied other people's code to 
-                       customize the default game engine, and this experience taught me some 
-                       Javascript knowledge.</p>
-                <p>I'm a self-motivated learner who is able to study independently. Web development is 
-                    what I am passionate about, and I'd love to be a lifelong learner for it.</p>
+                <p>I love designing and building stuff from scratch. </p>
+                <p>Information Technology is what I am passionate about, and I'd love to be a lifelong learner for it.</p>
                 
                 <a href="#projects" class="btn btn-outline">Check My Projects</a>
                 <a href="./Resume.pdf" class="btn btn-outline">Download My Resume</a>
