add new project

--- a/src/index.html
+++ b/src/index.html
@@ -200,12 +200,16 @@
 
             <div class="card card-project-cs ">
                 <div>
-                    <img class="project-img" src="img/project-inprogress.png" alt=""/>
+                    <img class="project-img" src="img/project-stacktourneyuiux.png" alt=""/>
                 </div>
                 <div>
-                    <h2 class="text-left">WIP</h2>
-                    <a href=""><button class="btn-small">Live Demo</button></a>
-                    <a href=""><button class="btn-small">Github</button></a>
+                    <h2 class="text-left">UIUX design for StackTourney</h2>
+                    <a href="https://www.figma.com/file/0OBgGe2MVsy607mQex9rJG/StackTourney-Public-FE?node-id=36%3A24470&t=lfmf4SYDqqgHUTSQ-1"><button class="btn-small">Link to Wireframes</button></a>
+                </div>
+                <div>
+                    <div class="chip">
+                        Figma
+                    </div>
                 </div>
             </div>
 
