add projects from CA bootcamp

--- a/src/index.html
+++ b/src/index.html
@@ -222,6 +222,10 @@
                         
                         PostgreSQL
                     </div>
+                    <div class="chip">
+                        
+                        AWS S3
+                    </div>
                 </div>
             </div>
 
